Closed Bug 1305198 Opened 9 years ago Closed 9 years ago

Fix null-deref when APZ is disabled in the compositor process

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox50 --- unaffected
firefox51 --- wontfix
firefox52 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Not that important but might as well fix.
Attachment #8794457 - Flags: review?(bugmail) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/5880da58e144 Fix null-deref when APZ is disabled and using out-of-process compositing. (bug 1305198, r=kats)
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Now that bug 1298173 is uplifted to aurora this bug should probably be as well. Feel free to request uplift or mark 51 as wontfix.
Flags: needinfo?(dvander)
No need to fix for 51, since the GPU process hasn't been enabled yet.
Flags: needinfo?(dvander)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: