Fix null-deref when APZ is disabled and using out-of-process compositing. (bug 1305198, r=kats)